--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,11 @@ h1 {
     color: yellowgreen;
 }
 
+p {
+    text-align: center;
+    line-height: 1.7;
+    font-size: 20px;
+}
+
 /* untrack -> add -> stage -> commit */
 /* modifide -> add -> stage -> commit */
